Add management tab and manager user.
- Added management tab
- Added new MANAGER_PRIVILEGE
- Added new ROLE_MANAGER
- Added new default user - manager@test.com
- Enabled GlobalMethodSecurity
- Added exception handler for AccessDeniedException

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -46,6 +46,10 @@ label.pages.users.message=View Logged In Users
 label.pages.users.sessionregistry.message=View Logged In Users from SessionRegistry
 label.pages.admin.message=Welcome Admin
 label.pages.user.message=Welcome User
+label.pages.accessDenied=Access denied
+label.pages.accessDenied.title=Access denied
+label.pages.management=Welcome in the management tab!
+label.pages.management.title=Management
 label.successRegister.title=Registration Success
 label.badUser.title=Invalid Link
 ValidEmail.user.email=Invalid email address!
