--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -43,6 +43,10 @@ label.pages.home.title=Inicio
 label.pages.home.message=Bienveni@ a Casa
 label.pages.admin.message=Bienvenid@ Admin
 label.pages.user.message=Bienvenid@ Usuari@
+label.pages.accessDenied=Acceso denegado
+label.pages.accessDenied.title=Acceso denegado
+label.pages.management=Gerente la pesta&ntilde;a de gesti&oacute;n!
+label.pages.management.title=Gerente
 label.successRegister.title=Registro Exitoso
 label.badUser.title=Enlace Invalido
 ValidEmail.user.email=Cuenta correo invlida!
